--- a/index.html
+++ b/index.html
@@ -31,39 +31,42 @@
 </head>
 
 <body>
-  <div class="contenedor-gral">
-    <div class="cont-img">
-      <div class="bloque">
-        <img src="/nft-preview-card-component-main/images/icon-view.svg" alt="" class="view">
+  
+  <main>
+    <div class="contenedor-gral">
+      <div class="cont-img">
+        <div class="bloque">
+          <img src="/nft-preview-card-component-main/images/icon-view.svg" alt="" class="view">
+        </div>
+        <img src="/nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
       </div>
-      <img src="/nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
-    </div>
 
-    <div class="title">
-      <h1>
-        Equilibrium #3429
-      </h1>
-      <p>Our Equilibrium collection promotes balance and calm</p>
-    </div>
-
-    <div class="contenedor-secundario">
-      <div class="col1">
-        <img  class="iconos" src="/nft-preview-card-component-main/images/icon-ethereum.svg" alt="">
-        <h2>0.041 ETH</h2>
+      <div class="title">
+        <h1>
+          Equilibrium #3429
+        </h1>
+        <p>Our Equilibrium collection promotes balance and calm</p>
       </div>
-      <div class="col2">
-        <img class="iconos" src="/nft-preview-card-component-main/images/icon-clock.svg" alt="">
-        <h2>3 days left</h2>
+
+      <div class="contenedor-secundario">
+        <div class="col1">
+          <img  class="iconos" src="/nft-preview-card-component-main/images/icon-ethereum.svg" alt="">
+          <h2>0.041 ETH</h2>
+        </div>
+        <div class="col2">
+          <img class="iconos" src="/nft-preview-card-component-main/images/icon-clock.svg" alt="">
+          <h2>3 days left</h2>
+        </div>
+      </div>
+
+      <div class="divisor"></div>
+
+      <div class="footer">
+        <img src="/nft-preview-card-component-main/images/image-avatar.png" alt="">
+        <p>Creation of <a href="#">Jules Wyvern</a></p>
       </div>
     </div>
-
-    <div class="divisor"></div>
-
-    <div class="footer">
-      <img src="/nft-preview-card-component-main/images/image-avatar.png" alt="">
-      <p>Creation of <a href="#">Jules Wyvern</a></p>
-    </div>
-  </div>
+   </main>
 </body>
 
 </html>
