--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -36,9 +36,9 @@
     <div class="contenedor-gral">
       <div class="cont-img">
         <div class="bloque">
-          <img src="/nft-preview-card-component-main/images/icon-view.svg" alt="" class="view">
+          <img src="nft-preview-card-component-main/images/icon-view.svg" alt="" class="view">
         </div>
-        <img src="/nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
+        <img src="nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
       </div>
 
       <div class="title">
@@ -50,11 +50,11 @@
 
       <div class="contenedor-secundario">
         <div class="col1">
-          <img  class="iconos" src="/nft-preview-card-component-main/images/icon-ethereum.svg" alt="">
+          <img  class="iconos" src="nft-preview-card-component-main/images/icon-ethereum.svg" alt="">
           <h2>0.041 ETH</h2>
         </div>
         <div class="col2">
-          <img class="iconos" src="/nft-preview-card-component-main/images/icon-clock.svg" alt="">
+          <img class="iconos" src="nft-preview-card-component-main/images/icon-clock.svg" alt="">
           <h2>3 days left</h2>
         </div>
       </div>
@@ -62,7 +62,7 @@
       <div class="divisor"></div>
 
       <div class="footer">
-        <img src="/nft-preview-card-component-main/images/image-avatar.png" alt="">
+        <img src="nft-preview-card-component-main/images/image-avatar.png" alt="">
         <p>Creation of <a href="#">Jules Wyvern</a></p>
       </div>
     </div>
