--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="bloque">
           <img src="nft-preview-card-component-main/images/icon-view.svg" alt="" class="view">
         </div>
-        <img src="nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
+        <img src="./nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
       </div>
 
       <div class="title">
