--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="bloque">
           <img src="nft-preview-card-component-main/images/icon-view.svg" alt="" class="view">
         </div>
-        <img src="./nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
+        <img src="nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
       </div>
 
       <div class="title">
@@ -50,7 +50,7 @@
 
       <div class="contenedor-secundario">
         <div class="col1">
-          <img  class="iconos" src="/nft-preview-card-component-main/images/icon-ethereum.svg" alt="">
+          <img  class="iconos" src="nft-preview-card-component-main/images/icon-ethereum.svg" alt="">
           <h2>0.041 ETH</h2>
         </div>
         <div class="col2">
