--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div class="contenedor-gral">
       <div class="cont-img">
         <div class="bloque">
-          <img src="nft-preview-card-component-main/images/icon-view.svg" alt="" class="view">
+          <img src="images/icon-view.svg" alt="" class="view">
         </div>
-        <img src="nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
+        <img src="images/image-equilibrium.jpg" alt="">
       </div>
 
       <div class="title">
@@ -50,11 +50,11 @@
 
       <div class="contenedor-secundario">
         <div class="col1">
-          <img  class="iconos" src="nft-preview-card-component-main/images/icon-ethereum.svg" alt="">
+          <img  class="iconos" src="images/icon-ethereum.svg" alt="">
           <h2>0.041 ETH</h2>
         </div>
         <div class="col2">
-          <img class="iconos" src="nft-preview-card-component-main/images/icon-clock.svg" alt="">
+          <img class="iconos" src="images/icon-clock.svg" alt="">
           <h2>3 days left</h2>
         </div>
       </div>
@@ -62,7 +62,7 @@
       <div class="divisor"></div>
 
       <div class="footer">
-        <img src="nft-preview-card-component-main/images/image-avatar.png" alt="">
+        <img src="image-avatar.png" alt="">
         <p>Creation of <a href="#">Jules Wyvern</a></p>
       </div>
     </div>
